--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -75,3 +75,7 @@ cursor: pointer;
     margin-top: -45px;
     margin-left: -46px;
 }
+.nav-menu a{
+    text-decoration: none;
+     color: #626262;
+}
