--- a/src/Components/Hero/Hero.css
+++ b/src/Components/Hero/Hero.css
@@ -1,16 +1,19 @@
 .hero{
     height: 100vh;
-    background: linear-gradient(180deg,#e1fff2,#e1ffea22 60%);
+    background: linear-gradient(180deg,#3ee29b,#e1ffea22 60%);
     display: flex;
+    align-items: center;
+    justify-content: center;
+   
 }
 .hero-left{
     flex: 1;
     display: flex;
     flex-direction: column;
-    justify-content: flex-start;
-    gap: 20px;
+    justify-content: center;
+    gap: 3px;
     padding-left: 80px;
-    line-height: 1.1;
+    
 }
 .hero-left h2{
     color: #090909;
@@ -21,4 +24,29 @@
     color: #171717;
     font-size: 70px;
     font-weight: 700;
+}
+.hero-latest-btn{
+    display: flex;
+    justify-content:center;
+    align-items: center;
+    gap:2px;
+    width: 250px;
+    height: 50px;
+    color: white;
+    background-color: #ff4141;
+    font-size: 22px;
+    border-radius: 75px;
+    
+}
+.hero-right{
+    flex: 1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.hand-hand-icon{
+    display: flex;
+    align-items: center;
+    gap: 7px;
+    
 }
